--- a/02-cian-downloader.ipynb
+++ b/02-cian-downloader.ipynb
@@ -182,8 +182,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[WARNING ] 2024-09-09 12:31:34 | The geckodriver version (0.34.0) detected in PATH at /usr/bin/geckodriver might not be compatible with the detected firefox version (129.0.1); currently, geckodriver 0.35.0 is recommended for firefox 129.*, so it is advised to delete the driver in PATH and retry\n",
-      "[INFO    ] 2024-09-09 12:31:35 | open virtual browser\n"
+      "[INFO    ] 2024-09-24 10:32:43 | open virtual browser\n"
      ]
     },
     {
@@ -199,43 +198,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-09 12:31:48 | page 1: 28 items\n",
-      "[INFO    ] 2024-09-09 12:31:56 | page 2: 28 items\n",
-      "[INFO    ] 2024-09-09 12:32:02 | page 3: 28 items\n",
-      "[INFO    ] 2024-09-09 12:32:09 | page 4: 28 items\n",
-      "[INFO    ] 2024-09-09 12:32:15 | page 5: 28 items\n",
-      "[INFO    ] 2024-09-09 12:32:23 | page 6: 28 items\n",
-      "[INFO    ] 2024-09-09 12:32:29 | page 7: 28 items\n",
-      "[INFO    ] 2024-09-09 12:32:34 | page 8: 28 items\n",
-      "[INFO    ] 2024-09-09 12:32:40 | page 9: 28 items\n",
-      "[INFO    ] 2024-09-09 12:32:46 | page 10: 28 items\n",
-      "[INFO    ] 2024-09-09 12:32:56 | page 11: 28 items\n",
-      "[INFO    ] 2024-09-09 12:33:05 | page 12: 28 items\n",
-      "[INFO    ] 2024-09-09 12:33:13 | page 13: 28 items\n",
-      "[INFO    ] 2024-09-09 12:33:22 | page 14: 28 items\n",
-      "[INFO    ] 2024-09-09 12:33:33 | page 15: 28 items\n",
-      "[INFO    ] 2024-09-09 12:33:39 | page 16: 28 items\n",
-      "[INFO    ] 2024-09-09 12:33:46 | page 17: 28 items\n",
-      "[INFO    ] 2024-09-09 12:33:52 | page 18: 28 items\n",
-      "[INFO    ] 2024-09-09 12:33:59 | page 19: 28 items\n",
-      "[INFO    ] 2024-09-09 12:34:07 | page 20: 28 items\n",
-      "[INFO    ] 2024-09-09 12:34:13 | page 21: 28 items\n",
-      "[INFO    ] 2024-09-09 12:34:18 | page 22: 28 items\n",
-      "[INFO    ] 2024-09-09 12:34:45 | page 23: 28 items\n",
-      "[INFO    ] 2024-09-09 12:34:52 | page 24: 28 items\n",
-      "[INFO    ] 2024-09-09 12:34:59 | page 25: 28 items\n",
-      "[INFO    ] 2024-09-09 12:35:05 | page 26: 28 items\n",
-      "[INFO    ] 2024-09-09 12:35:17 | page 27: 28 items\n",
-      "[INFO    ] 2024-09-09 12:35:23 | page 28: 28 items\n",
-      "[INFO    ] 2024-09-09 12:35:31 | page 29: 28 items\n",
-      "[INFO    ] 2024-09-09 12:35:38 | page 30: 28 items\n",
-      "[INFO    ] 2024-09-09 12:35:45 | page 31: 28 items\n"
+      "[INFO    ] 2024-09-24 10:32:54 | page 1: 28 items\n",
+      "[INFO    ] 2024-09-24 10:33:00 | page 2: 28 items\n",
+      "[INFO    ] 2024-09-24 10:33:07 | page 3: 28 items\n",
+      "[INFO    ] 2024-09-24 10:33:14 | page 4: 28 items\n",
+      "[INFO    ] 2024-09-24 10:33:36 | page 5: 28 items\n",
+      "[INFO    ] 2024-09-24 10:33:41 | page 6: 28 items\n",
+      "[INFO    ] 2024-09-24 10:33:46 | page 7: 28 items\n",
+      "[INFO    ] 2024-09-24 10:33:53 | page 8: 28 items\n",
+      "[INFO    ] 2024-09-24 10:33:59 | page 9: 28 items\n",
+      "[INFO    ] 2024-09-24 10:34:06 | page 10: 28 items\n",
+      "[INFO    ] 2024-09-24 10:34:11 | page 11: 28 items\n",
+      "[INFO    ] 2024-09-24 10:34:16 | page 12: 28 items\n",
+      "[INFO    ] 2024-09-24 10:34:21 | page 13: 28 items\n",
+      "[INFO    ] 2024-09-24 10:34:25 | page 14: 28 items\n",
+      "[INFO    ] 2024-09-24 10:34:30 | page 15: 28 items\n",
+      "[INFO    ] 2024-09-24 10:34:33 | page 16: 28 items\n",
+      "[INFO    ] 2024-09-24 10:34:37 | page 17: 28 items\n",
+      "[INFO    ] 2024-09-24 10:34:41 | page 18: 28 items\n",
+      "[INFO    ] 2024-09-24 10:34:45 | page 19: 28 items\n",
+      "[INFO    ] 2024-09-24 10:34:50 | page 20: 28 items\n",
+      "[INFO    ] 2024-09-24 10:34:53 | page 21: 28 items\n",
+      "[INFO    ] 2024-09-24 10:34:57 | page 22: 27 items\n",
+      "[INFO    ] 2024-09-24 10:35:02 | page 23: 28 items\n",
+      "[INFO    ] 2024-09-24 10:35:08 | page 24: 28 items\n",
+      "[INFO    ] 2024-09-24 10:35:12 | page 25: 28 items\n",
+      "[INFO    ] 2024-09-24 10:35:17 | page 26: 28 items\n",
+      "[INFO    ] 2024-09-24 10:35:22 | page 27: 28 items\n",
+      "[INFO    ] 2024-09-24 10:35:28 | page 28: 28 items\n",
+      "[INFO    ] 2024-09-24 10:35:34 | page 29: 28 items\n",
+      "[INFO    ] 2024-09-24 10:35:38 | page 30: 28 items\n",
+      "[INFO    ] 2024-09-24 10:35:42 | page 31: 28 items\n",
+      "[INFO    ] 2024-09-24 10:35:45 | page 32: 28 items\n",
+      "[INFO    ] 2024-09-24 10:35:46 | page 33: 0 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "868"
+       "895"
       ]
      },
      "metadata": {},
@@ -244,7 +245,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/flat/cian/cian_2024-09-09_12-40_raw_sevastopol.pkl'"
+       "'data/2024/raw/flat/cian/cian_2024-09-24_10-35_raw_sevastopol.pkl'"
       ]
      },
      "metadata": {},
@@ -263,14 +264,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-09 12:40:54 | page 1: 28 items\n",
-      "[INFO    ] 2024-09-09 12:40:58 | page 2: 28 items\n"
+      "[INFO    ] 2024-09-24 10:35:53 | page 1: 28 items\n",
+      "[INFO    ] 2024-09-24 10:35:53 | page 2: 0 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "56"
+       "28"
       ]
      },
      "metadata": {},
@@ -279,7 +280,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/land/cian/cian_2024-09-09_12-45_raw_sevastopol.pkl'"
+       "'data/2024/raw/land/cian/cian_2024-09-24_10-35_raw_sevastopol.pkl'"
       ]
      },
      "metadata": {},
@@ -298,20 +299,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-09 12:46:06 | page 1: 28 items\n",
-      "[INFO    ] 2024-09-09 12:46:14 | page 2: 28 items\n",
-      "[INFO    ] 2024-09-09 12:46:21 | page 3: 28 items\n",
-      "[INFO    ] 2024-09-09 12:46:29 | page 4: 28 items\n",
-      "[INFO    ] 2024-09-09 12:46:37 | page 5: 28 items\n",
-      "[INFO    ] 2024-09-09 12:46:44 | page 6: 28 items\n",
-      "[INFO    ] 2024-09-09 12:46:54 | page 7: 28 items\n",
-      "[INFO    ] 2024-09-09 12:47:00 | page 8: 28 items\n"
+      "[INFO    ] 2024-09-24 10:36:06 | page 1: 28 items\n",
+      "[INFO    ] 2024-09-24 10:36:16 | page 2: 28 items\n",
+      "[INFO    ] 2024-09-24 10:36:16 | page 3: 0 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "224"
+       "56"
       ]
      },
      "metadata": {},
@@ -320,7 +316,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/house/cian/cian_2024-09-09_12-52_raw_sevastopol.pkl'"
+       "'data/2024/raw/house/cian/cian_2024-09-24_10-36_raw_sevastopol.pkl'"
       ]
      },
      "metadata": {},
@@ -339,19 +335,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-09 12:52:10 | page 1: 28 items\n",
-      "[INFO    ] 2024-09-09 12:52:20 | page 2: 28 items\n",
-      "[INFO    ] 2024-09-09 12:52:28 | page 3: 28 items\n",
-      "[INFO    ] 2024-09-09 12:52:34 | page 4: 28 items\n",
-      "[INFO    ] 2024-09-09 12:52:43 | page 5: 28 items\n",
-      "[INFO    ] 2024-09-09 12:52:50 | page 6: 28 items\n",
-      "[INFO    ] 2024-09-09 12:52:55 | page 7: 28 items\n"
+      "[INFO    ] 2024-09-24 10:36:24 | page 1: 28 items\n",
+      "[INFO    ] 2024-09-24 10:36:24 | page 2: 0 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "196"
+       "28"
       ]
      },
      "metadata": {},
@@ -360,7 +351,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/flat/cian/cian_2024-09-09_12-57_raw_sudak.pkl'"
+       "'data/2024/raw/flat/cian/cian_2024-09-24_10-36_raw_sudak.pkl'"
       ]
      },
      "metadata": {},
@@ -379,15 +370,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-09 12:57:59 | page 1: 28 items\n",
-      "[INFO    ] 2024-09-09 12:58:02 | page 2: 28 items\n",
-      "[INFO    ] 2024-09-09 12:58:08 | page 3: 25 items\n"
+      "[INFO    ] 2024-09-24 10:36:29 | page 1: 28 items\n",
+      "[INFO    ] 2024-09-24 10:36:29 | page 2: 0 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "81"
+       "28"
       ]
      },
      "metadata": {},
@@ -396,7 +386,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/land/cian/cian_2024-09-09_12-58_raw_sudak.pkl'"
+       "'data/2024/raw/land/cian/cian_2024-09-24_10-36_raw_sudak.pkl'"
       ]
      },
      "metadata": {},
@@ -415,16 +405,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-09 12:58:12 | page 1: 28 items\n",
-      "[INFO    ] 2024-09-09 12:58:20 | page 2: 28 items\n",
-      "[INFO    ] 2024-09-09 12:58:25 | page 3: 28 items\n",
-      "[INFO    ] 2024-09-09 12:58:30 | page 4: 28 items\n"
+      "[INFO    ] 2024-09-24 10:36:36 | page 1: 28 items\n",
+      "[INFO    ] 2024-09-24 10:36:36 | page 2: 0 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "112"
+       "28"
       ]
      },
      "metadata": {},
@@ -433,7 +421,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/house/cian/cian_2024-09-09_12-58_raw_sudak.pkl'"
+       "'data/2024/raw/house/cian/cian_2024-09-24_10-36_raw_sudak.pkl'"
       ]
      },
      "metadata": {},
@@ -443,8 +431,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 12.8 s, sys: 521 ms, total: 13.4 s\n",
-      "Wall time: 26min 56s\n"
+      "CPU times: user 8.83 s, sys: 358 ms, total: 9.19 s\n",
+      "Wall time: 3min 55s\n"
      ]
     }
    ],
@@ -509,7 +497,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Пн 09 сен 2024 12:58:30 MSK\r\n"
+      "Вт 24 сен 2024 10:36:36 MSK\r\n"
      ]
     }
    ],
@@ -544,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
