--- a/01-avito-downloader.ipynb
+++ b/01-avito-downloader.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8872059a",
    "metadata": {
     "scrolled": false
@@ -185,13 +185,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-24 10:32:29 | open virtual browser\n"
+      "[INFO    ] 2024-09-24 10:52:20 | open virtual browser\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'https://www.avito.ru/sevastopol/kvartiry/prodam'"
+       "'https://www.avito.ru/sudak/kvartiry/prodam'"
       ]
      },
      "metadata": {},
@@ -201,38 +201,203 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-24 10:32:40 | page 1: 53 items\n",
-      "[INFO    ] 2024-09-24 10:32:53 | page 2: 50 items\n",
-      "[INFO    ] 2024-09-24 10:33:04 | page 3: 50 items\n",
-      "[INFO    ] 2024-09-24 10:33:15 | page 4: 50 items\n",
-      "[INFO    ] 2024-09-24 10:33:24 | page 5: 50 items\n",
-      "[INFO    ] 2024-09-24 10:33:34 | page 6: 50 items\n",
-      "[INFO    ] 2024-09-24 10:33:44 | page 7: 50 items\n",
-      "[INFO    ] 2024-09-24 10:33:54 | page 8: 50 items\n",
-      "[INFO    ] 2024-09-24 10:34:04 | page 9: 50 items\n",
-      "[INFO    ] 2024-09-24 10:34:14 | page 10: 49 items\n",
-      "[INFO    ] 2024-09-24 10:34:25 | page 11: 50 items\n",
-      "[INFO    ] 2024-09-24 10:34:35 | page 12: 49 items\n",
-      "[INFO    ] 2024-09-24 10:34:46 | page 13: 49 items\n",
-      "[INFO    ] 2024-09-24 10:34:57 | page 14: 50 items\n",
-      "[INFO    ] 2024-09-24 10:35:08 | page 15: 50 items\n",
-      "[INFO    ] 2024-09-24 10:35:21 | page 16: 50 items\n",
-      "[INFO    ] 2024-09-24 10:35:31 | page 17: 50 items\n",
-      "[INFO    ] 2024-09-24 10:35:42 | page 18: 50 items\n",
-      "[INFO    ] 2024-09-24 10:35:54 | page 19: 50 items\n",
-      "[INFO    ] 2024-09-24 10:36:04 | page 20: 50 items\n",
-      "[INFO    ] 2024-09-24 10:36:15 | page 21: 50 items\n",
-      "[INFO    ] 2024-09-24 10:36:25 | page 22: 50 items\n",
-      "[INFO    ] 2024-09-24 10:36:37 | page 23: 50 items\n",
-      "[INFO    ] 2024-09-24 10:36:47 | page 24: 50 items\n",
-      "[INFO    ] 2024-09-24 10:36:58 | page 25: 50 items\n",
-      "[INFO    ] 2024-09-24 10:37:07 | page 26: 50 items\n",
-      "[INFO    ] 2024-09-24 10:37:16 | page 27: 48 items\n",
-      "[INFO    ] 2024-09-24 10:37:25 | page 28: 49 items\n",
-      "[INFO    ] 2024-09-24 10:37:35 | page 29: 48 items\n",
-      "[INFO    ] 2024-09-24 10:37:46 | page 30: 50 items\n",
-      "[INFO    ] 2024-09-24 10:37:55 | page 31: 50 items\n",
-      "[INFO    ] 2024-09-24 10:38:05 | page 32: 50 items\n"
+      "[INFO    ] 2024-09-24 10:52:36 | page 1: 53 items\n",
+      "[INFO    ] 2024-09-24 10:52:41 | page 2: 294 items\n",
+      "[INFO    ] 2024-09-24 10:52:48 | page 3: 299 items\n",
+      "[INFO    ] 2024-09-24 10:52:54 | page 4: 329 items\n",
+      "[INFO    ] 2024-09-24 10:53:04 | page 5: 50 items\n",
+      "[INFO    ] 2024-09-24 10:53:12 | page 6: 393 items\n",
+      "[INFO    ] 2024-09-24 10:53:18 | page 7: 235 items\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1653"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'data/2024/raw/flat/avito/avito_2024-09-24_10-53_raw_sudak.pkl'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.avito.ru/sudak/zemelnye_uchastki/prodam'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO    ] 2024-09-24 10:53:27 | page 1: 50 items\n",
+      "[INFO    ] 2024-09-24 10:53:32 | page 2: 261 items\n",
+      "[INFO    ] 2024-09-24 10:53:38 | page 3: 265 items\n",
+      "[INFO    ] 2024-09-24 10:53:44 | page 4: 278 items\n",
+      "[INFO    ] 2024-09-24 10:53:49 | page 5: 296 items\n",
+      "[INFO    ] 2024-09-24 10:53:51 | page 6: 41 items\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1191"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'data/2024/raw/land/avito/avito_2024-09-24_10-53_raw_sudak.pkl'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.avito.ru/sudak/doma_dachi_kottedzhi/prodam'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO    ] 2024-09-24 10:54:01 | page 1: 50 items\n",
+      "[INFO    ] 2024-09-24 10:54:06 | page 2: 265 items\n",
+      "[INFO    ] 2024-09-24 10:54:12 | page 3: 274 items\n",
+      "[INFO    ] 2024-09-24 10:54:14 | page 4: 59 items\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "648"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'data/2024/raw/house/avito/avito_2024-09-24_10-54_raw_sudak.pkl'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.avito.ru/bahchisaray/zemelnye_uchastki/prodam'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO    ] 2024-09-24 10:54:24 | page 1: 50 items\n",
+      "[INFO    ] 2024-09-24 10:54:30 | page 2: 50 items\n",
+      "[INFO    ] 2024-09-24 10:54:39 | page 3: 50 items\n",
+      "[INFO    ] 2024-09-24 10:54:46 | page 4: 50 items\n",
+      "[INFO    ] 2024-09-24 10:54:53 | page 5: 50 items\n",
+      "[INFO    ] 2024-09-24 10:55:01 | page 6: 50 items\n",
+      "[INFO    ] 2024-09-24 10:55:08 | page 7: 50 items\n",
+      "[INFO    ] 2024-09-24 10:55:15 | page 8: 50 items\n",
+      "[INFO    ] 2024-09-24 10:55:22 | page 9: 50 items\n",
+      "[INFO    ] 2024-09-24 10:55:30 | page 10: 50 items\n",
+      "[INFO    ] 2024-09-24 10:55:37 | page 11: 50 items\n",
+      "[INFO    ] 2024-09-24 10:55:45 | page 12: 50 items\n",
+      "[INFO    ] 2024-09-24 10:55:52 | page 13: 50 items\n",
+      "[INFO    ] 2024-09-24 10:55:58 | page 14: 50 items\n",
+      "[INFO    ] 2024-09-24 10:56:06 | page 15: 50 items\n",
+      "[INFO    ] 2024-09-24 10:56:08 | page 16: 7 items\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "757"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'data/2024/raw/land/avito/avito_2024-09-24_10-56_raw_bahchisaray.pkl'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.avito.ru/bahchisaray/doma_dachi_kottedzhi/prodam'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO    ] 2024-09-24 10:56:18 | page 1: 50 items\n",
+      "[INFO    ] 2024-09-24 10:56:27 | page 2: 50 items\n",
+      "[INFO    ] 2024-09-24 10:56:34 | page 3: 50 items\n",
+      "[INFO    ] 2024-09-24 10:56:43 | page 4: 50 items\n",
+      "[INFO    ] 2024-09-24 10:56:51 | page 5: 50 items\n",
+      "[INFO    ] 2024-09-24 10:56:55 | page 6: 18 items\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "268"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'data/2024/raw/house/avito/avito_2024-09-24_10-56_raw_bahchisaray.pkl'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 33.5 s, sys: 1.21 s, total: 34.7 s\n",
+      "Wall time: 4min 37s\n"
      ]
     }
    ],
@@ -273,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a98a46de",
    "metadata": {},
    "outputs": [],
@@ -283,10 +448,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e97e319b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вт 24 сен 2024 10:56:55 MSK\r\n"
+     ]
+    }
+   ],
    "source": [
     "!date"
    ]
