--- a/01-avito-downloader.ipynb
+++ b/01-avito-downloader.ipynb
@@ -49,11 +49,26 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "45ea7901-9582-4a84-b5cc-153e74247e6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !mkdir -p data/2024/raw/flat-arenda/avito"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "97d83b45",
    "metadata": {},
    "outputs": [],
    "source": [
     "source = [\n",
+    "    # {\n",
+    "    #         'place': 'sevastopol',\n",
+    "    #     'subfolder': 'flat-arenda',\n",
+    "    #           'url': 'https://www.avito.ru/sevastopol/kvartiry/sdam/na_dlitelnyy_srok'\n",
+    "    # },\n",
     "    {\n",
     "            'place': 'sevastopol',\n",
     "        'subfolder': 'flat',\n",
@@ -109,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b92abbe2",
    "metadata": {},
    "outputs": [],
@@ -125,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "13a281e0",
    "metadata": {},
    "outputs": [],
@@ -135,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8e955d4b",
    "metadata": {},
    "outputs": [],
@@ -153,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "863ee8e4",
    "metadata": {},
    "outputs": [],
@@ -165,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "6520cd59",
    "metadata": {},
    "outputs": [],
@@ -175,23 +190,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "8872059a",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-24 10:52:20 | open virtual browser\n"
+      "[INFO    ] 2024-10-15 11:46:32 | open virtual browser\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'https://www.avito.ru/sudak/kvartiry/prodam'"
+       "'https://www.avito.ru/sevastopol/kvartiry/sdam/na_dlitelnyy_srok'"
       ]
      },
      "metadata": {},
@@ -201,19 +214,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-24 10:52:36 | page 1: 53 items\n",
-      "[INFO    ] 2024-09-24 10:52:41 | page 2: 294 items\n",
-      "[INFO    ] 2024-09-24 10:52:48 | page 3: 299 items\n",
-      "[INFO    ] 2024-09-24 10:52:54 | page 4: 329 items\n",
-      "[INFO    ] 2024-09-24 10:53:04 | page 5: 50 items\n",
-      "[INFO    ] 2024-09-24 10:53:12 | page 6: 393 items\n",
-      "[INFO    ] 2024-09-24 10:53:18 | page 7: 235 items\n"
+      "[INFO    ] 2024-10-15 11:46:46 | page 1: 50 items\n",
+      "[INFO    ] 2024-10-15 11:46:56 | page 2: 50 items\n",
+      "[INFO    ] 2024-10-15 11:47:05 | page 3: 50 items\n",
+      "[INFO    ] 2024-10-15 11:47:14 | page 4: 50 items\n",
+      "[INFO    ] 2024-10-15 11:47:23 | page 5: 50 items\n",
+      "[INFO    ] 2024-10-15 11:47:34 | page 6: 50 items\n",
+      "[INFO    ] 2024-10-15 11:47:43 | page 7: 50 items\n",
+      "[INFO    ] 2024-10-15 11:47:52 | page 8: 50 items\n",
+      "[INFO    ] 2024-10-15 11:48:01 | page 9: 50 items\n",
+      "[INFO    ] 2024-10-15 11:48:09 | page 10: 50 items\n",
+      "[INFO    ] 2024-10-15 11:48:18 | page 11: 50 items\n",
+      "[INFO    ] 2024-10-15 11:48:27 | page 12: 50 items\n",
+      "[INFO    ] 2024-10-15 11:48:37 | page 13: 50 items\n",
+      "[INFO    ] 2024-10-15 11:48:47 | page 14: 50 items\n",
+      "[INFO    ] 2024-10-15 11:48:57 | page 15: 50 items\n",
+      "[INFO    ] 2024-10-15 11:49:06 | page 16: 50 items\n",
+      "[INFO    ] 2024-10-15 11:49:16 | page 17: 50 items\n",
+      "[INFO    ] 2024-10-15 11:49:25 | page 18: 50 items\n",
+      "[INFO    ] 2024-10-15 11:49:32 | page 19: 37 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1653"
+       "937"
       ]
      },
      "metadata": {},
@@ -222,16 +247,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/flat/avito/avito_2024-09-24_10-53_raw_sudak.pkl'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'https://www.avito.ru/sudak/zemelnye_uchastki/prodam'"
+       "'data/2024/raw/flat-arenda/avito/avito_2024-10-15_11-49_raw_sevastopol.pkl'"
       ]
      },
      "metadata": {},
@@ -241,163 +257,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-24 10:53:27 | page 1: 50 items\n",
-      "[INFO    ] 2024-09-24 10:53:32 | page 2: 261 items\n",
-      "[INFO    ] 2024-09-24 10:53:38 | page 3: 265 items\n",
-      "[INFO    ] 2024-09-24 10:53:44 | page 4: 278 items\n",
-      "[INFO    ] 2024-09-24 10:53:49 | page 5: 296 items\n",
-      "[INFO    ] 2024-09-24 10:53:51 | page 6: 41 items\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1191"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'data/2024/raw/land/avito/avito_2024-09-24_10-53_raw_sudak.pkl'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'https://www.avito.ru/sudak/doma_dachi_kottedzhi/prodam'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO    ] 2024-09-24 10:54:01 | page 1: 50 items\n",
-      "[INFO    ] 2024-09-24 10:54:06 | page 2: 265 items\n",
-      "[INFO    ] 2024-09-24 10:54:12 | page 3: 274 items\n",
-      "[INFO    ] 2024-09-24 10:54:14 | page 4: 59 items\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "648"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'data/2024/raw/house/avito/avito_2024-09-24_10-54_raw_sudak.pkl'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'https://www.avito.ru/bahchisaray/zemelnye_uchastki/prodam'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO    ] 2024-09-24 10:54:24 | page 1: 50 items\n",
-      "[INFO    ] 2024-09-24 10:54:30 | page 2: 50 items\n",
-      "[INFO    ] 2024-09-24 10:54:39 | page 3: 50 items\n",
-      "[INFO    ] 2024-09-24 10:54:46 | page 4: 50 items\n",
-      "[INFO    ] 2024-09-24 10:54:53 | page 5: 50 items\n",
-      "[INFO    ] 2024-09-24 10:55:01 | page 6: 50 items\n",
-      "[INFO    ] 2024-09-24 10:55:08 | page 7: 50 items\n",
-      "[INFO    ] 2024-09-24 10:55:15 | page 8: 50 items\n",
-      "[INFO    ] 2024-09-24 10:55:22 | page 9: 50 items\n",
-      "[INFO    ] 2024-09-24 10:55:30 | page 10: 50 items\n",
-      "[INFO    ] 2024-09-24 10:55:37 | page 11: 50 items\n",
-      "[INFO    ] 2024-09-24 10:55:45 | page 12: 50 items\n",
-      "[INFO    ] 2024-09-24 10:55:52 | page 13: 50 items\n",
-      "[INFO    ] 2024-09-24 10:55:58 | page 14: 50 items\n",
-      "[INFO    ] 2024-09-24 10:56:06 | page 15: 50 items\n",
-      "[INFO    ] 2024-09-24 10:56:08 | page 16: 7 items\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "757"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'data/2024/raw/land/avito/avito_2024-09-24_10-56_raw_bahchisaray.pkl'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'https://www.avito.ru/bahchisaray/doma_dachi_kottedzhi/prodam'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO    ] 2024-09-24 10:56:18 | page 1: 50 items\n",
-      "[INFO    ] 2024-09-24 10:56:27 | page 2: 50 items\n",
-      "[INFO    ] 2024-09-24 10:56:34 | page 3: 50 items\n",
-      "[INFO    ] 2024-09-24 10:56:43 | page 4: 50 items\n",
-      "[INFO    ] 2024-09-24 10:56:51 | page 5: 50 items\n",
-      "[INFO    ] 2024-09-24 10:56:55 | page 6: 18 items\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "268"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'data/2024/raw/house/avito/avito_2024-09-24_10-56_raw_bahchisaray.pkl'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 33.5 s, sys: 1.21 s, total: 34.7 s\n",
-      "Wall time: 4min 37s\n"
+      "CPU times: user 21.8 s, sys: 941 ms, total: 22.8 s\n",
+      "Wall time: 3min 4s\n"
      ]
     }
    ],
@@ -438,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a98a46de",
    "metadata": {},
    "outputs": [],
@@ -448,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "e97e319b",
    "metadata": {},
    "outputs": [
@@ -456,7 +317,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Вт 24 сен 2024 10:56:55 MSK\r\n"
+      "Вт 15 окт 2024 11:49:35 MSK\n"
      ]
     }
    ],
