--- a/02-cian-downloader.ipynb
+++ b/02-cian-downloader.ipynb
@@ -174,15 +174,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "4cd65147",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-24 11:04:22 | open virtual browser\n"
+      "[INFO    ] 2024-10-15 10:01:13 | open virtual browser\n"
      ]
     },
     {
@@ -198,44 +196,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-24 11:04:34 | page 1: 28 items\n",
-      "[INFO    ] 2024-09-24 11:04:41 | page 2: 28 items\n",
-      "[INFO    ] 2024-09-24 11:04:48 | page 3: 28 items\n",
-      "[INFO    ] 2024-09-24 11:04:54 | page 4: 28 items\n",
-      "[INFO    ] 2024-09-24 11:05:04 | page 5: 28 items\n",
-      "[INFO    ] 2024-09-24 11:05:09 | page 6: 28 items\n",
-      "[INFO    ] 2024-09-24 11:05:13 | page 7: 28 items\n",
-      "[INFO    ] 2024-09-24 11:05:19 | page 8: 28 items\n",
-      "[INFO    ] 2024-09-24 11:05:23 | page 9: 28 items\n",
-      "[INFO    ] 2024-09-24 11:05:30 | page 10: 28 items\n",
-      "[INFO    ] 2024-09-24 11:05:36 | page 11: 28 items\n",
-      "[INFO    ] 2024-09-24 11:05:40 | page 12: 28 items\n",
-      "[INFO    ] 2024-09-24 11:05:46 | page 13: 28 items\n",
-      "[INFO    ] 2024-09-24 11:05:50 | page 14: 28 items\n",
-      "[INFO    ] 2024-09-24 11:05:54 | page 15: 28 items\n",
-      "[INFO    ] 2024-09-24 11:05:57 | page 16: 28 items\n",
-      "[INFO    ] 2024-09-24 11:06:00 | page 17: 28 items\n",
-      "[INFO    ] 2024-09-24 11:06:05 | page 18: 28 items\n",
-      "[INFO    ] 2024-09-24 11:06:09 | page 19: 28 items\n",
-      "[INFO    ] 2024-09-24 11:06:13 | page 20: 28 items\n",
-      "[INFO    ] 2024-09-24 11:06:18 | page 21: 28 items\n",
-      "[INFO    ] 2024-09-24 11:06:21 | page 22: 27 items\n",
-      "[INFO    ] 2024-09-24 11:06:26 | page 23: 28 items\n",
-      "[INFO    ] 2024-09-24 11:06:31 | page 24: 28 items\n",
-      "[INFO    ] 2024-09-24 11:06:35 | page 25: 28 items\n",
-      "[INFO    ] 2024-09-24 11:06:38 | page 26: 28 items\n",
-      "[INFO    ] 2024-09-24 11:06:43 | page 27: 28 items\n",
-      "[INFO    ] 2024-09-24 11:06:57 | page 28: 28 items\n",
-      "[INFO    ] 2024-09-24 11:07:01 | page 29: 28 items\n",
-      "[INFO    ] 2024-09-24 11:07:06 | page 30: 28 items\n",
-      "[INFO    ] 2024-09-24 11:07:09 | page 31: 28 items\n",
-      "[INFO    ] 2024-09-24 11:07:10 | page 32: 0 items\n"
+      "[INFO    ] 2024-10-15 10:01:19 | page 1: 28 items\n",
+      "[INFO    ] 2024-10-15 10:01:24 | page 2: 28 items\n",
+      "[INFO    ] 2024-10-15 10:01:29 | page 3: 28 items\n",
+      "[INFO    ] 2024-10-15 10:01:34 | page 4: 28 items\n",
+      "[INFO    ] 2024-10-15 10:02:48 | page 5: 28 items\n",
+      "[INFO    ] 2024-10-15 10:03:34 | page 6: 28 items\n",
+      "[INFO    ] 2024-10-15 10:03:38 | page 7: 28 items\n",
+      "[INFO    ] 2024-10-15 10:03:42 | page 8: 28 items\n",
+      "[INFO    ] 2024-10-15 10:03:46 | page 9: 28 items\n",
+      "[INFO    ] 2024-10-15 10:03:51 | page 10: 28 items\n",
+      "[INFO    ] 2024-10-15 10:03:55 | page 11: 28 items\n",
+      "[INFO    ] 2024-10-15 10:04:00 | page 12: 28 items\n",
+      "[INFO    ] 2024-10-15 10:04:04 | page 13: 28 items\n",
+      "[INFO    ] 2024-10-15 10:04:08 | page 14: 28 items\n",
+      "[INFO    ] 2024-10-15 10:04:13 | page 15: 28 items\n",
+      "[INFO    ] 2024-10-15 10:04:16 | page 16: 28 items\n",
+      "[INFO    ] 2024-10-15 10:04:20 | page 17: 28 items\n",
+      "[INFO    ] 2024-10-15 10:04:24 | page 18: 28 items\n",
+      "[INFO    ] 2024-10-15 10:04:29 | page 19: 28 items\n",
+      "[INFO    ] 2024-10-15 10:04:32 | page 20: 28 items\n",
+      "[INFO    ] 2024-10-15 10:04:36 | page 21: 28 items\n",
+      "[INFO    ] 2024-10-15 10:04:40 | page 22: 28 items\n",
+      "[INFO    ] 2024-10-15 10:04:43 | page 23: 28 items\n",
+      "[INFO    ] 2024-10-15 10:04:46 | page 24: 28 items\n",
+      "[INFO    ] 2024-10-15 10:04:49 | page 25: 28 items\n",
+      "[INFO    ] 2024-10-15 10:04:53 | page 26: 28 items\n",
+      "[INFO    ] 2024-10-15 10:04:56 | page 27: 28 items\n",
+      "[INFO    ] 2024-10-15 10:04:59 | page 28: 28 items\n",
+      "[INFO    ] 2024-10-15 10:05:03 | page 29: 28 items\n",
+      "[INFO    ] 2024-10-15 10:05:06 | page 30: 28 items\n",
+      "[INFO    ] 2024-10-15 10:05:09 | page 31: 28 items\n",
+      "[INFO    ] 2024-10-15 10:05:13 | page 32: 28 items\n",
+      "[INFO    ] 2024-10-15 10:05:17 | page 33: 28 items\n",
+      "[INFO    ] 2024-10-15 10:05:21 | page 34: 28 items\n",
+      "[INFO    ] 2024-10-15 10:05:22 | page 35: 0 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "867"
+       "952"
       ]
      },
      "metadata": {},
@@ -244,7 +245,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/flat/cian/cian_2024-09-24_11-07_raw_sevastopol.pkl'"
+       "'data/2024/raw/flat/cian/cian_2024-10-15_10-05_raw_sevastopol.pkl'"
       ]
      },
      "metadata": {},
@@ -263,9 +264,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-24 11:07:16 | page 1: 28 items\n",
-      "[INFO    ] 2024-09-24 11:07:22 | page 2: 28 items\n",
-      "[INFO    ] 2024-09-24 11:07:22 | page 3: 0 items\n"
+      "[INFO    ] 2024-10-15 10:06:03 | page 1: 28 items\n",
+      "[INFO    ] 2024-10-15 10:06:06 | page 2: 28 items\n",
+      "[INFO    ] 2024-10-15 10:06:07 | page 3: 0 items\n"
      ]
     },
     {
@@ -280,7 +281,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/land/cian/cian_2024-09-24_11-07_raw_sevastopol.pkl'"
+       "'data/2024/raw/land/cian/cian_2024-10-15_10-06_raw_sevastopol.pkl'"
       ]
      },
      "metadata": {},
@@ -299,14 +300,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-24 11:07:30 | page 1: 28 items\n",
-      "[INFO    ] 2024-09-24 11:07:31 | page 2: 0 items\n"
+      "[INFO    ] 2024-10-15 10:06:10 | page 1: 28 items\n",
+      "[INFO    ] 2024-10-15 10:06:15 | page 2: 28 items\n",
+      "[INFO    ] 2024-10-15 10:06:15 | page 3: 0 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "28"
+       "56"
       ]
      },
      "metadata": {},
@@ -315,7 +317,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/house/cian/cian_2024-09-24_11-07_raw_sevastopol.pkl'"
+       "'data/2024/raw/house/cian/cian_2024-10-15_10-06_raw_sevastopol.pkl'"
       ]
      },
      "metadata": {},
@@ -334,8 +336,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-24 11:07:37 | page 1: 28 items\n",
-      "[INFO    ] 2024-09-24 11:07:37 | page 2: 0 items\n"
+      "[INFO    ] 2024-10-15 10:06:23 | page 1: 28 items\n",
+      "[INFO    ] 2024-10-15 10:06:24 | page 2: 0 items\n"
      ]
     },
     {
@@ -350,7 +352,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/flat/cian/cian_2024-09-24_11-07_raw_sudak.pkl'"
+       "'data/2024/raw/flat/cian/cian_2024-10-15_10-06_raw_sudak.pkl'"
       ]
      },
      "metadata": {},
@@ -369,8 +371,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-24 11:07:42 | page 1: 28 items\n",
-      "[INFO    ] 2024-09-24 11:07:42 | page 2: 0 items\n"
+      "[INFO    ] 2024-10-15 10:06:27 | page 1: 28 items\n",
+      "[INFO    ] 2024-10-15 10:06:27 | page 2: 0 items\n"
      ]
     },
     {
@@ -385,7 +387,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/land/cian/cian_2024-09-24_11-07_raw_sudak.pkl'"
+       "'data/2024/raw/land/cian/cian_2024-10-15_10-06_raw_sudak.pkl'"
       ]
      },
      "metadata": {},
@@ -404,15 +406,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2024-09-24 11:07:53 | page 1: 28 items\n",
-      "[INFO    ] 2024-09-24 11:07:56 | page 2: 28 items\n",
-      "[INFO    ] 2024-09-24 11:07:57 | page 3: 0 items\n"
+      "[INFO    ] 2024-10-15 10:06:30 | page 1: 28 items\n",
+      "[INFO    ] 2024-10-15 10:06:31 | page 2: 0 items\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "56"
+       "28"
       ]
      },
      "metadata": {},
@@ -421,7 +422,7 @@
     {
      "data": {
       "text/plain": [
-       "'data/2024/raw/house/cian/cian_2024-09-24_11-07_raw_sudak.pkl'"
+       "'data/2024/raw/house/cian/cian_2024-10-15_10-06_raw_sudak.pkl'"
       ]
      },
      "metadata": {},
@@ -431,8 +432,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.2 s, sys: 288 ms, total: 8.49 s\n",
-      "Wall time: 3min 36s\n"
+      "CPU times: user 9.46 s, sys: 377 ms, total: 9.84 s\n",
+      "Wall time: 5min 20s\n"
      ]
     }
    ],
@@ -497,7 +498,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Вт 24 сен 2024 11:07:57 MSK\r\n"
+      "Вт 15 окт 2024 10:06:31 MSK\n"
      ]
     }
    ],
